# SimpleCarTrackingWithHexacopter

./: .gitignore  README.md  package structures.graphml  structures.graphml
config/: config  config_integration  config_nuc  config_perception
control/: CMakeLists.txt  generate_waypoints_structure.graphml  package.xml  topic_structures.graphml
control/cmake/: CMakeLists.txt  Makefile
control/cmake/AirLib/: CMakeLists.txt  Makefile
control/cmake/AirLibUnitTests/: CMakeLists.txt  Makefile
control/cmake/DroneServer/: CMakeLists.txt  Makefile
control/cmake/DroneShell/: CMakeLists.txt  Makefile
control/cmake/HelloCar/: CMakeLists.txt
control/cmake/HelloDrone/: CMakeLists.txt  Makefile
control/cmake/MavLinkCom/: CMakeLists.txt  Makefile
control/cmake/MavLinkCom/MavLinkTest/: CMakeLists.txt  Makefile
control/cmake/cmake-modules/: CommonSetup.cmake
control/cmake/rpclib_wrapper/: CMakeLists.txt
control/cmake/rpclib_wrapper/rpclib/: Makefile  rpclib.pc
control/cmake/rpclib_wrapper/rpclib/cmake/: rpclibTargets.cmake
control/include/: extract_lane.h  generate_waypoints.h
control/include/control/: airsim_offb.h  extract_lane.h  generate_waypoints.h  mavros_offb.h  offb.h  tf_broadcaster.h  utils.h  visualize_control.h
control/include/off_board_control/: extract_lane.h  generate_waypoints.h  utils.h
control/launch/: airsim-offb_node.launch  checker_node.launch  control.launch  evaluation_node.launch  extract_lane_node.launch  gazebo-offb_node.launch  generate_waypoints_node.launch  launch-common.sh  launch-offb.sh  mavros_offb_node.launch  offb_node.launch  static_transforms.launch  tf_broadcaster_node.launch  visualize_control_node.launch
control/rviz/: default.rviz
control/scripts/: airsim-launch-offb.sh  eval.py  gazebo-launch-offb.sh  launch-common.sh  launch-offb.sh  launch-visual.sh
control/settings/: multirotor_px4_settings.json
control/src/: airsim_offb.cpp  airsim_offb_node.cpp  char_pub_node.cpp  checker_node.cpp  display_node.cpp  evaluation_node.cpp  extract_lane.cpp  extract_lane_node.cpp  generate_waypoints.cpp  generate_waypoints_node.cpp  mavros_offb.cpp  mavros_offb_node.cpp  offb.cpp  offb_node.cpp  tf_broadcaster.cpp  tf_broadcaster_node.cpp  utils.cpp  visualize_control.cpp  visualize_control_node.cpp
msgs/uav_msgs/: CMakeLists.txt  package.xml
msgs/uav_msgs/msg/: Chat.msg  CloudCluster.msg  CloudClusterArray.msg  ControlStatus.msg  DetectedObject.msg  DetectionTime.msg  GenerateWaypointState.msg  OffboardState.msg  Offset.msg  Param.msg  PerceptionTimer.msg  PolyfitLaneData.msg  Roi.msg  TargetState.msg  TargetWP.msg  TargetWPState.msg  TargetWaypoints.msg  TrackingTime.msg  Trajectory.msg  UavStatus.msg  VehicleState.msg  VehicleStateArray.msg  Waypoint.msg  uav_status.msg
offboard_control/: CMakeLists.txt  package.xml
offboard_control/include/: generate_waypoints.h
offboard_control/launch/: airsim-offb_node.launch  gazebo-offb_node.launch  generate_waypoints_node.launch  launch-common.sh
offboard_control/rviz/: default.rviz
offboard_control/scripts/: airsim-launch-offb.sh  gazebo-launch-offb.sh
offboard_control/src/: display_node.cpp  generate_waypoints.cpp  generate_waypoints_node.cpp
perception/detection/: CMakeLists.txt  package.xml
perception/detection/include/: cluster.hpp  dataType.hpp  euclideanClustering.hpp  rayGroundFilter.hpp
perception/detection/launch/: euclideanClustering.launch
perception/detection/msg/: DetectedObject.msg
perception/detection/rviz/: default.rviz
perception/detection/src/: cluster.cpp  euclideanClustering.cpp  main.cpp  rayGroundFilter.cpp
perception/tracking/: CMakeLists.txt  package.xml
perception/tracking/include/tracking/: KF.hpp  KFTracker.hpp  PolygonGenerator.hpp  SimpleTracker.hpp  TypeInfo.hpp  UtilityH.hpp  kfTrackerCore.hpp
perception/tracking/launch/: KFTracker.launch  tracking.launch
perception/tracking/src/: CheckTimer.cpp  KF.cpp  KFTracker.cpp  KFTrackerMain.cpp  PolygonGenerator.cpp  SimpleTracker.cpp  TargetIdPublisher.cpp  UtilityH.cpp  kfTracker.cpp  kfTrackerCore.cpp
perception/tracking2/: CMakeLists.txt  package.xml
perception/tracking2/include/tracking2/: KF.hpp  KFTracker.hpp
perception/tracking2/launch/: KFTracker.launch
perception/tracking2/src/: KF.cpp  KFTracker.cpp  KFTrackerMain.cpp
scripts/: control.sh  perception.sh
visualization/: CMakeLists.txt  package.xml
visualization/include/: visualize_detected_objects.hpp
visualization/include/visualization/: visualize_control.h  visualize_detected_objects.hpp  visualize_perception.hpp
visualization/launch/: visualize_perception_node.launch  visualize_rviz.launch
visualization/rviz/: default.rviz
visualization/src/: main.cpp  visualize_control.cpp  visualize_control_node.cpp  visualize_detected_objects.cpp  visualize_detected_objects_main.cpp  visualize_perception.cpp  visualize_perception_node.cpp
